# injectorz

./: .gitignore  CMakeLists.txt  README.md  build.bat
payload/: test_payload.cpp
src/: main.cpp  manual_mapper.cpp  manual_mapper.h  pe_utils.cpp  pe_utils.h  process_utils.cpp  process_utils.h
